# ondc-nodata-drax2sql

./: .gitignore
sql/: Ordernhm_last_2_months.sql  drax_queries_with_source.json  order_level.sql  order_status_fact.sql  stage_order_level.sql
src/: ATP_Order_Stage_pipeline.py  add_source_mapping.py  consolidate_dax_queries.py  pyproject.toml  runEtl.sh
src/common/: db_util.py  gspread_util.py
src/etl/: ATP_Logistics_Stage_pipeline.py  ETL_GSpread.py
src/helper/: add_source_mapping.py
